<resources>
    <string name="app_name">Tron3.0</string>
    <string name="level_on_game">level:</string>
    <string name="title_activity_help">HelpActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="start">START</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="help">HELP</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="you_ride_a_lightcycle_that_gives_off_a_rail_as_you_move_around_the_closed_arena_nwhat_are_you_supposed_to_do_survive_nyou_need_to_force_the_enemies_lightcycles_into_walls_and_light_cycles_rails_while_simultaneously_avoid_them_use_the_arrows_to_move_and_the_other_button_to_boost_you_only_have_three_oportunities_to_boost_on_each_level">You ride a lightcycle that gives off a rail as you move around the closed arena. \nWhat are you supposed to do? Survive!\n\nYou need to force the enemies lightcycles into walls and light cycles rails, while simultaneously avoid them.\n\nUse the arrows to move and the other button to boost.\n\nYou only have three oportunities to boost on each level.</string>
    <string name="username">username</string>
    <string name="_1000">1000</string>
    <string name="submit">submit</string>
</resources>